tests/invalid/bytearray_unsupported_type/main.py
def run_case() -> None:
    x: float = 3.14

    y: bytearray = bytearray(x)

if __name__ == "__main__":
    run_case()
